# highway_runner_remake

./: .gitignore  CMakeLists.txt  README.md
include/: Container.h  FileLoader.h  ScoreCounter.h  ShaderProgram.h  ThirdPersonCamera.h  WavefrontReader.h  extra.h
include/Components/: Camera.h  Component.h  Material.h  Mesh.h  PointLight.h  Texture2D.h  Transform.h
include/Components/CollisionBox/: CollisionBox.h
resources/models/: Ford.mtl  cube.mtl  gold.mtl
resources/shaders/: fragment.txt  vertex.txt
sources/: Camera.cpp  CollisionBox.cpp  Container.cpp  FileLoader.cpp  Material.cpp  Mesh.cpp  PointLight.cpp  ScoreCounter.cpp  ShaderProgram.cpp  Texture2D.cpp  ThirdPersonCamera.cpp  Transform.cpp  WavefrontReader.cpp  extra.cpp  main.cpp
